# WebSynth

./: README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  agent.py  instructions.md  scout.py  tools.py
src/mdl/agent/: __init__.py  agent.py  instructions.md  tools.py  utils.py
src/ui/: chat.py
