[project]
name = "websynth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.2.11",
    "crawl4ai>=0.5.0.post8",
    "firecrawl-py>=1.15.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
    "tavily-python>=0.5.4",
]
